--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.3.5.RELEASE'
+		springBootVersion = '1.4.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -25,24 +25,19 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.session:spring-session')
-	compile('org.springframework.boot:spring-boot-starter-social-facebook')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile(group: 'org.modelmapper', name: 'modelmapper', version: '0.7.6')
-	compile(group: 'com.fasterxml.jackson.core',
-			name: 'jackson-databind', version: '2.7.4');
-	compile(group: 'com.fasterxml.jackson.core', name: 'jackson-core',
-			version: '2.7.4');
-	compile(group: 'com.fasterxml.jackson.core', name: 'jackson-annotations',
-			version: '2.7.4');
-	testCompile('org.springframework.boot:spring-boot-starter-test');
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb');
+	compile('org.springframework.boot:spring-boot-starter-security');
+	compile('org.springframework.boot:spring-boot-starter-web');
+	compile('org.springframework.boot:spring-boot-starter-social-facebook');
+	compile('org.springframework.session:spring-session');
+	compile('org.modelmapper:modelmapper:0.7.6');
+	compile('com.fasterxml.jackson.core:jackson-databind:2.8.1');
+	compile('com.fasterxml.jackson.core:jackson-core:2.8.1');
+	compile('com.fasterxml.jackson.core:jackson-annotations:2.8.1');
+	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE');
 	testCompile('org.mockito:mockito-core:1.10.19');
 }
-
 
 eclipse {
 	classpath {
