--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	compile('com.fasterxml.jackson.core:jackson-core:2.8.1');
 	compile('com.fasterxml.jackson.core:jackson-annotations:2.8.1');
 	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE');
+	testCompile('org.springframework.security:spring-security-test:4.0.1.RELEASE');
 	testCompile('org.mockito:mockito-core:1.10.19');
 }
 
