--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-social-facebook');
 	compile('org.springframework.session:spring-session');
 	compile('org.modelmapper:modelmapper:0.7.6');
+	compile('org.projectlombok:lombok:1.16.10');
 	compile('com.fasterxml.jackson.core:jackson-databind:2.8.1');
 	compile('com.fasterxml.jackson.core:jackson-core:2.8.1');
 	compile('com.fasterxml.jackson.core:jackson-annotations:2.8.1');
