--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile('com.fasterxml.jackson.core:jackson-databind:2.8.5');
 	compile('com.fasterxml.jackson.core:jackson-core:2.8.5');
 	compile('com.fasterxml.jackson.core:jackson-annotations:2.8.5');
+	compile("org.flywaydb:flyway-core:4.1.2");
 	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.3.RELEASE');
 	testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE');
 }
