--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.http.converters.preferred-json-mapper=jackson
 spring.jackson.deserialization.use_big_decimal_for_floats=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/personal-garage
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.generate-ddl=true
