--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	compile('com.fasterxml.jackson.core:jackson-annotations:2.8.5')
 	compile('org.postgresql:postgresql:9.4.1211.jre7')
 	compile("org.flywaydb:flyway-core:4.1.2")
+	compile("joda-time:joda-time:2.9.9")
 	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.3.RELEASE')
 	testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE')
 }
