Moved Transaction to Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/personal-garage
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
+
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
