--- a/build.gradle
+++ b/build.gradle
@@ -19,28 +19,25 @@ apply plugin: 'org.springframework.boot'
 
 jar {
 	baseName = 'personalgarageservice'
-	version = '0.0.3-SNAPSHOT'
+	version = '0.0.4-SNAPSHOT'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
+	compile('com.personalgarage.service:personal-garage-service-interfaces:0.0.1-SNAPSHOT')
+	compile('ma.glasnost.orika:orika-core:1.5.1')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.session:spring-session')
-	compile('ma.glasnost.orika:orika-core:1.5.1')
-	compile('org.projectlombok:lombok:1.16.12')
-	compile('com.fasterxml.jackson.core:jackson-databind:2.8.5')
-	compile('com.fasterxml.jackson.core:jackson-core:2.8.5')
-	compile('com.fasterxml.jackson.core:jackson-annotations:2.8.5')
 	compile('org.postgresql:postgresql:9.4.1211.jre7')
 	compile("org.flywaydb:flyway-core:4.1.2")
-	compile("joda-time:joda-time:2.9.9")
 	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.3.RELEASE')
 	testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE')
 }
