JWT authentication and SSL initial implementation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
+# HTTPS configuration
+server.port=8443
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=17badxLpiggies02
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+
+# JSON configuration
 spring.http.converters.preferred-json-mapper=jackson
 spring.jackson.deserialization.use_big_decimal_for_floats=true
 
+# Data source configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/personal-garage
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
-
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
