--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,15 @@ repositories {
 
 dependencies {
 	compile('com.personalgarage.service:personal-garage-service-interfaces:0.0.1-SNAPSHOT')
-	compile('ma.glasnost.orika:orika-core:1.5.1')
+	compile('com.personalgarage.service:personal-garage-service-security:0.0.1-SNAPSHOT')
+	compile("io.jsonwebtoken:jjwt:0.7.0")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.session:spring-session')
 	compile('org.postgresql:postgresql:9.4.1211.jre7')
 	compile("org.flywaydb:flyway-core:4.1.2")
+	compile('ma.glasnost.orika:orika-core:1.5.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.3.RELEASE')
 	testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE')
 }
