--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	compile('org.postgresql:postgresql:9.4.1211.jre7')
 	compile("org.flywaydb:flyway-core:4.1.2")
 	compile('ma.glasnost.orika:orika-core:1.5.1')
+	compile('com.fasterxml.jackson.core:jackson-databind:2.9.2')
+	compile('com.fasterxml.jackson.core:jackson-core:2.9.2')
+	compile('com.fasterxml.jackson.core:jackson-annotations:2.9.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test:1.4.3.RELEASE')
 	testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE')
 }
