--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,56 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.8.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.8.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 plugins {
-	id "org.flywaydb.flyway" version "4.1.2"
+    id "org.flywaydb.flyway" version "4.1.2"
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 
 jar {
-	baseName = 'personalgarageservice'
-	version = '0.0.4-SNAPSHOT'
+    baseName = 'personalgarageservice'
+    version = '0.0.4-SNAPSHOT'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-	mavenCentral()
-	mavenLocal()
+    mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-	compile('com.personalgarage.service:personal-garage-service-interfaces:0.0.1-SNAPSHOT')
-	compile("io.jsonwebtoken:jjwt:0.7.0")
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.session:spring-session')
-	compile('org.postgresql:postgresql:9.4.1211.jre7')
-	compile("org.flywaydb:flyway-core:4.1.2")
-	compile('ma.glasnost.orika:orika-core:1.5.1')
-	compile('com.fasterxml.jackson.core:jackson-databind:2.9.2')
-	compile('com.fasterxml.jackson.core:jackson-core:2.9.2')
-	compile('com.fasterxml.jackson.core:jackson-annotations:2.9.2')
-	testCompile('org.springframework.boot:spring-boot-starter-test:1.5.8.RELEASE')
-	testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.session:spring-session')
+    compile('com.fasterxml.jackson.core:jackson-databind:2.9.2')
+    compile('com.fasterxml.jackson.core:jackson-core:2.9.2')
+    compile('com.fasterxml.jackson.core:jackson-annotations:2.9.2')
+    compile("io.jsonwebtoken:jjwt:0.7.0")
+    compile('org.postgresql:postgresql:9.4.1211.jre7')
+    compile("org.flywaydb:flyway-core:4.1.2")
+    compile('ma.glasnost.orika:orika-core:1.5.1')
+    compile('org.projectlombok:lombok:1.16.12')
+    compile("joda-time:joda-time:2.9.9")
+    testCompile('org.springframework.boot:spring-boot-starter-test:1.5.8.RELEASE')
+    testCompile('org.springframework.security:spring-security-test:4.2.0.RELEASE')
 }
 
 flyway {
-	url = 'jdbc:postgresql://localhost:5432/personal-garage'
-	user = 'postgres'
-	password = 'admin'
-	schemas = ['public']
-	locations = ["filesystem:$project.projectDir/src/main/resources/db/migration"]
+    url = 'jdbc:postgresql://localhost:5432/personal-garage'
+    user = 'postgres'
+    password = 'admin'
+    schemas = ['public']
+    locations = ["filesystem:$project.projectDir/src/main/resources/db/migration"]
 }
