Log level settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
+#Logging configuration
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
