Moved JWT configuration from class to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,15 @@ spring.datasource.password=admin
 spring.jpa.generate-ddl=true
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 
-#Logging configuration
+# Logging configuration
 logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+# JWT security configuration - commit publicly only for demonstration purposes
+app.jwt.token.secret=-rPVH=A7=,.s@;2'{)J8
+# Expiration - 10 days
+app.jwt.token.expiration=864000000
+# Note the trailing space
+app.jwt.token.prefix=Bearer 
+app.jwt.token.header=Authorization
