--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Logging configuration
 logging.level.root=WARN
