--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-actuator')
     compile('com.fasterxml.jackson.core:jackson-databind:2.9.5')
     compile('com.fasterxml.jackson.core:jackson-core:2.9.5')
     compile('com.fasterxml.jackson.core:jackson-annotations:2.9.5')
