--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile('com.fasterxml.jackson.core:jackson-databind:2.9.5')
     compile('com.fasterxml.jackson.core:jackson-core:2.9.5')
     compile('com.fasterxml.jackson.core:jackson-annotations:2.9.5')
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.5')
     compile("io.jsonwebtoken:jjwt:0.9.0")
     compile("org.jadira.usertype:usertype.core:6.0.1.GA")
     compile('org.postgresql:postgresql:9.4.1211.jre7')
